--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,6 +31,6 @@
 
   </div>
   
-  <div class="oldsite">This website may change (perhaps significantly) before the semester starts.</div>
+  <!-- <div class="oldsite">This website may change (perhaps significantly) before the semester starts.</div> -->
 
 </header>
