--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,8 @@
   <title>{% if page.title %}CS3130: {{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/main.css" | relativize_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <link rel="stylesheet" href="{{site.katex}}/katex.min.css">
   <script defer src="{{site.katex}}/katex.min.js"></script>
   <script>document.addEventListener("DOMContentLoaded", function () {
