more schedule warning

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,6 @@
     </nav>
 
   </div>
-  
-  <div class="oldsite">This website may change (perhaps significantly) before the semester starts.</div>
 
+  <!-- <div class="oldsite">This website may change (perhaps significantly) before the semester starts.</div> -->
 </header>
