more subtle tentative warning

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -145,6 +145,11 @@ blockquote {
     border:1px solid grey; padding:1ex; border-radius:1ex; margin:1em 4em;
 }
 
+.oldsitesm { 
+    background-color: #fbb; font-size: 100%;
+    border:1px solid grey; padding:1ex; border-radius:1ex; margin:1em 4em;
+}
+
 .aside, .note {
     margin: 1em 0em 1em 0em;
     background: rgba(0,0,0,0.0625);
