--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,5 +31,5 @@
 
   </div>
 
-   <div class="oldsite">This website may change (perhaps significantly) before the semester starts.</div>
+  <!-- <div class="oldsite">This website may change (perhaps significantly) before the semester starts.</div> -->
 </header>
